Fix z-index of svg cross icon in avatar

--- a/src/main/ui/ui/src/styles/App.css
+++ b/src/main/ui/ui/src/styles/App.css
@@ -436,3 +436,7 @@ body {
 .notice > p {
   max-width: 650px;
 }
+
+.avatar-container svg {
+  z-index: 30 !important;
+}
